small security update